* Group-specific post statuses. [#156 state:resolved] * More common.php cleanups. * Tester improvements. * SQL->escape can be set to not auto-wrap with quotes with the first (bool) argument.

--- a/admin/style.css
+++ b/admin/style.css
@@ -989,4 +989,7 @@ img.smiley {
 	font-weight: bold;
 	color: #bbb;
 }
+.group_prefix {
+	color: #999;
+}
 /* @end */
